--- a/Front/package.json
+++ b/Front/package.json
@@ -12,8 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "reactstrap": "^8.2.0",
-    "serialize-javascript": "^2.1.2"
+    "reactstrap": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
